[package]
name = "gocontroll-platform"
description = "A crate to develop moduline applications in rust"
version = "0.1.0"
edition = "2021"
authors = ["GOcontroll <support@gocontroll.com"]
homepage = "www.gocontroll.com"
repository = "https://github.com/SpieringsAE/gocontroll_platform"
license = "MIT"
keywords = ["gocontroll", "moduline"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = ["leds", "modules", "adcs"]
leds = ["dep:i2c-linux"]
modules = ["dep:spidev"]
adcs = ["dep:i2c-linux"]

[dependencies]
i2c-linux = { version = "0.1.2", optional = true }
spidev = { version = "0.6", optional = true }
